<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="396dp"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:background="#E6E5E5"
            android:textAlignment="textEnd"
            android:textColor="#101010"
            android:textSize="36sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_7"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnEith"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_8"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnNine"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_9"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_4"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnFive"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_5"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnSix"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_6"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_1"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_2"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnThree"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_3"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btnNull"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="2"
            android:background="#989898"
            android:text="@string/btn_text_0"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>

        <Button
            android:id="@+id/btnPoint"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="#989898"
            android:text="@string/btn_text_point"
            android:textColor="#FDFCFC"
            android:textSize="36sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

</LinearLayout>
